logs/mobility/build.make.104.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In function ‘float getHopkinsIndex()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:167:10: error: ‘hopkins_index’ was not declared in this scope
   return hopkins_index;
          ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In function ‘float getMu()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:172:10: error: ‘mu’ was not declared in this scope
   return mu;
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp: In function ‘void targetHandler(const ConstPtr&)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:336:42: error: redeclaration of ‘std_msgs::String log_msg’
                         std_msgs::String log_msg;
                                          ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:324:42: error: ‘std_msgs::String log_msg’ previously declared here
                         std_msgs::String log_msg;
                                          ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/mobility.cpp:339:80: error: ‘class ALSAController’ has no member named ‘getMu’
                             + boost::lexical_cast<std::string>(alsa_controller.getMu()) + ", "
                                                                                ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
